/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package paladin.kata;
option go_package = "pkg/proto";

message FindAvailableStatesRequest {
    string domain_uuid = 1; // The runtime instance UUID of the domain (not the name)
    string schema_id = 2; // The ID of the schema
    string query_json = 3; // The query specification in JSON
}

message StoredState {
    string hash_id = 1;
    string schema_id = 2;
    int64 stored_at = 3;
    string data_json = 4;
    optional StateLock lock = 5;
}

message StateLock {
    string sequence = 1;
    bool creating = 2;
    bool spending = 3;
}

message FindAvailableStatesResponse {
    repeated StoredState states = 1;
}
